Adicionando rota dos detalhes
